# kaylang

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCUMENTATION.md  IDEAS.md  LANGUAGE_REFERENCE.md  README.md  SYNTAX.ebnf  SYNTAX.md  rust-toolchain.toml  rustfmt.toml
docs/: LANGUAGE_REFERENCE.md  SYNTAX.ebnf  SYNTAX.md
examples/: check_verbosity_auto.rs  check_verbosity_normal.rs  check_verbosity_quiet.rs  check_verbosity_verbose.rs  compile.rs  compile_asm.rs  compile_kay.rs  compile_obj.rs  features_test.blz  features_test.kay  fizzbuzz.blz  fizzbuzz.kay  help.rs  main.blz  pe_0001.blz  pe_0001.kay  pe_0002.blz  pe_0002.kay  pe_0003.blz  pe_0003.kay  pe_0004.blz  pe_0004.kay  pe_0005.blz  pe_0005.kay  pe_0006.kay  pe_0007.blz  pe_0007.kay  pe_0008.kay  pe_0009.blz  pe_0009.kay  pe_0010.blz  pe_0010.kay  pe_0011.kay  pe_0012.blz  pe_0012.kay  pe_0014.blz  pe_0014.kay  pe_0021.kay  pe_0030.blz  pe_0030.kay  (+2 more)
examples/fizzbuzz/: fizzbuzz.blz
examples/project_euler/: 0001.kay  0002.kay  0003.kay  0004.kay  0005.kay  0007.kay  0008.kay  0010.kay  0011.kay  0014.kay  0030.kay  pe_0001.kay  pe_0002.kay  pe_0003.kay  pe_0004.kay  pe_0005.kay  pe_0006.kay  pe_0007.kay  pe_0008.kay  pe_0009.kay  pe_0010.kay  pe_0011.kay  pe_0012.kay  pe_0014.kay  pe_0021.kay  pe_0030.kay
examples/project_euler/1/: main.blz
examples/project_euler/10/: main.blz
examples/project_euler/12/: main.blz
examples/project_euler/14/: main.blz
examples/project_euler/3/: main.blz
examples/project_euler/30/: main.blz
examples/project_euler/4/: main.blz
examples/project_euler/5/: main.blz
examples/project_euler/6/: main.blz
examples/project_euler/7/: main.blz
examples/project_euler/9/: main.blz
src/: artifacts.rs  assembler.rs  ast.rs  back_end.rs  checker.rs  cli.rs  color.rs  compiler.rs  error.rs  errors.rs  front_end.rs  lexer.rs  lib.rs  linker.rs  logging.rs  main.rs  parser.rs  run.rs  src_file.rs  syntax.rs  tokenizer.rs
src/back_end/: artifacts.rs  asm.rs  assembler.rs  compiler.rs  linker.rs  mod.rs  reg.rs  run.rs
src/cli/: logging.rs  mod.rs
src/compiler/: artifacts.rs  asm.rs  reg.rs
src/front_end/: abstract_syntax_tree.rs  ast.rs  mod.rs  src_file.rs  syntax_tree.rs  tokenizer.rs
src/syntax/: ast.rs  mod.rs  op.rs  syntax_parser.rs  tokenizer.rs  types.rs  untyped_ast.rs
syntax/: CHANGELOG.md  language-configuration.json
syntax/vscode/: CHANGELOG.md  README.md  language-configuration.json  syntax.tmLanguage.json
tests/: common.rs  project_euler.rs
