[package]
name = "kaylang"
version = "0.5.0"
edition = "2021"
authors = ["Stefano Incardone"]
categories = ["compilers", "command-line-utilities"]
keywords = ["language", "compiler"]
description = "Experimenting with programming languages by creating one"
readme = "README.md"
repository = "https://github.com/StefanoIncardone/kaylang"
license = "MIT"

[profile.dev]
debug = "full"
opt-level = 0
# codegen-units = 1
# incremental = false
# lto = "fat"

[profile.test]
debug = "full"
opt-level = 0
# codegen-units = 1
# incremental = false
# lto = "fat"

[lints.clippy]
## to be used once in a while
# nursery = "warn"
# pedantic = "warn"
# restriction = "warn"

cargo = "forbid"
manual_map = "allow"
from_over_into = "allow"
large_stack_arrays = "forbid"
too-many-arguments = "allow"
zero_prefixed_literal = "allow"
manual_let_else = "warn"
no_effect_undescore_binding = "warn"

[lints.rust]
deprecated = "forbid"
absolute_paths_not_starting_with_crate = "forbid"
elided-lifetimes-in-paths = "warn"
keyword_idents = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "warn"
unstable_features = "forbid"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_results = "forbid"
unused_tuple_struct_fields = "warn"
private_bounds = "forbid"
private_interfaces = "forbid"
